2008-11-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* wand/wandtest.c: Eliminate memory leak.
	* wand/drawing_wand.c (DestroyDrawingWand): Eliminate memory
	leaks.
	* coders/xwd.c (WriteXWDImage): Force colormapped images with more
	than 256 colors to DirectClass.
	* magick/enhance.c (ModulateImage): Improve progress message.
	* coders/msl.c: Eliminate memory leaks.
	* GraphicsMagick.spec.in: Apply RPM spec file fixes from Giacomo
	Tenaglia for Red Hat Linux 4.

2008-11-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/msl.c: Fix bug with attributes becoming appended to
	themselves.  Resolves SF issue 2255754. Reflowed code.

2008-11-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* version.sh: GraphicsMagick 1.3 released.
	* www/OpenMP.rst: Updated with latest measurement data.
	* www/benchmarks.rst: Updated with latest benchmark data.
	* coders/url.c (RegisterURLImage): Register HTTP and FTP URL
	support in the "unstable" category since these are capable of
	accessing the network and therefore represent a potential security
	issue.  Register the FILE URL support in the "stable" category
	since it is capable of incorporating local disk files, which may
	still represent a security security issue for server applications.
	Note that disabling these functions might cause some existing MSL,
	MVG and SVG scripts to stop working if they use external URLs.

2008-11-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/pnm.c (ReadPNMImage): Sequential multi-thread the PNM raw
	format readers. Can improve read performance quite substantially
	for large PBM and PGM files, and less so for PPM.  There is most
	benefit for systems with more I/O than one CPU core will support.
	Systems with slow I/O and a relatively fast CPU may see somewhat
	diminished read performance with more CPU consumption.  As such,
	this is effectively a verification that multi-threading the reader
	is possible, and may be of benefit to power-users.