@@ -21,6 +21,14 @@
 </tr>
 </table>
 <p>
+2008-11-12  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> coders/jp2.c (BlobClose): Leak a little bit less memory when
+        reading a JP2 file.
+
+</UL>
+<p>
 2008-11-11  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
