@@ -1,3 +1,8 @@
+2008-11-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* coders/jp2.c (BlobClose): Leak a little bit less memory when
+	reading a JP2 file.
+
 2008-11-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* wand/wandtest.c: Eliminate memory leak.
